new build script for ci builds